--- a/tailwind/buttons.html
+++ b/tailwind/buttons.html
@@ -3,3 +3,7 @@
                focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">
   Message
 </button>
+
+<button class="bg-sky-500 hover:bg-sky-700 px-5 py-2 text-sm leading-5 rounded-full font-semibold text-white">
+  Save changes
+</button>
