--- a/tailwind/buttons.html
+++ b/tailwind/buttons.html
@@ -4,6 +4,13 @@
   Message
 </button>
 
-<button class="bg-sky-500 hover:bg-sky-700 px-5 py-2 text-sm leading-5 rounded-full font-semibold text-white">
+<button class="bg-sky-500 hover:bg-sky-700 
+               px-5 py-2 text-sm leading-5 rounded-full font-semibold text-white">
+  Save changes
+</button>
+
+<button class="bg-violet-500 hover:bg-violet-600 active:bg-violet-700 
+               focus:outline-none focus:ring focus:ring-violet-300
+               px-5 py-2 text-sm leading-5 rounded-full font-semibold text-white">
   Save changes
 </button>
